# fastfoodgo

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/fastfoodgo/: agent.py  analysis.py  database.py  ml_train.py  order.py  seed.py  web.py
src/fastfoodgo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_order.py
